--- a/css/style.css
+++ b/css/style.css
@@ -497,14 +497,15 @@ a {
 
 .menu__item-descr {
     margin-top: 20px;
-    padding: 0 20px
+    padding: 0 20px;
+    min-height: 140px;
 }
 
 .menu__item-divider {
     width: 100%;
     height: 1px;
     background-color: rgba(0, 0, 0, .25);
-    margin-top: 40px
+    margin-top: 20px
 }
 
 .menu__item-price {
